Realizando ultimas etapas do challenge para finalizar.